--- a/frontend/src/Css/Home.css
+++ b/frontend/src/Css/Home.css
@@ -5,7 +5,7 @@
     height: 100vh;
     align-items: center; /* Centrează orizontal conținutul */
     background-color: rgb(180, 172, 188); /* Purple */
-    background-image: url('../resources/image.png');
+    background-image: url('../resources/school2.jpg');
     background-repeat: repeat;
     background-size: auto; /* Asigură-te că imaginea nu este scalată și se repetă */
 }
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(176, 141, 186, 0.8); /* Transparent white background */
+    background-color: rgba(176, 141, 186, 0.9); /* Transparent white background */
     padding: 2rem;
     border-radius: 10px;
     width: 140%;
