--- a/frontend/src/Css/Home.css
+++ b/frontend/src/Css/Home.css
@@ -10,6 +10,26 @@
     background-size: auto; /* Asigură-te că imaginea nu este scalată și se repetă */
 }
 
+.fade-enter {
+  opacity: 0;
+  transform: scale(0.9);
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+
 
 .navbar_h {
     background-color: #000000;
