--- a/frontend/src/Css/Nivel.css
+++ b/frontend/src/Css/Nivel.css
@@ -19,11 +19,11 @@ body {
 }
 
 .h2_nivel {
-  color: #f0e8ee; /* White text color */
-  text-align: left; /* Align text to the left */
+  color: #f0e8ee;
+  text-align: left;
   margin-bottom: 20px;
-  font-size: 20px; /* Adjust font size as needed */
-  margin-left: 0; /* Ensure margin-left is 0 */
+  font-size: 20px;
+  margin-left: 0;
 }
 
 .question_asked {
@@ -58,7 +58,7 @@ li {
 }
 
 .btn_quest1 {
-  background-color: #f09292; /* Pink button background */
+  background-color: #f09292;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -66,18 +66,18 @@ li {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease, border-color 0.3s ease;
-  width: 300px; /* Make buttons narrower */
+  width: 300px;
   margin: 5px 0;
-  text-align: left; /* Align text to the left */
+  text-align: left;
 }
 
 .btn_quest1.selected {
-  background-color: #92d5f6; /* Purple background when selected */
-  border: 2px solid #0a87b8; /* Darker purple border */
+  background-color: #92d5f6;
+  border: 2px solid #0a87b8;
 }
 
 .btn_quest {
-  background-color: rgba(151, 125, 186, 0.87); /* Pink button background */
+  background-color: rgba(151, 125, 186, 0.87);
   color: #fff;
   padding: 10px 20px;
   border: none;
