--- a/frontend/src/Css/Home.css
+++ b/frontend/src/Css/Home.css
@@ -45,7 +45,6 @@
   position: relative;
   width: 100%; /* Ensure container takes the full width */
 }
-
 .level {
   color: white;
   border: none;
@@ -57,8 +56,17 @@
   border-radius: 12px;
   position: relative;
   z-index: 0;
-  background-color: #000;
+  background-color: #000; /* Fundal implicit */
   margin: 1rem; /* Adjust the space around each button */
+}
+
+.level.disabled {
+  background-color: #7b7575 !important; /* Utilizează !important pentru a avea prioritate */
+  cursor: not-allowed;
+}
+
+.level.disabled::after {
+  background-color: #7b7575; /* Ajustează fundalul pseudo-elementului ::after */
 }
 
 .level::after {
