--- a/frontend/src/Css/Rezultat.css
+++ b/frontend/src/Css/Rezultat.css
@@ -1,4 +1,3 @@
-/* Rezultat.css */
 .container_rez {
     background-color: white;
     padding: 20px;
@@ -24,9 +23,9 @@
 }
 
 .score_image {
-    max-width: 100xp;
+    max-width: 300px;
     height: auto;
-    max-height: 100px;
+    max-height: 300px;
     display: block;
     margin: 20px auto;
 }
@@ -49,4 +48,36 @@
 
 .button_rez:hover {
     background-color: #45a049;
+}
+
+.question.correct {
+    background-color: #d4edda;
+    color: #155724;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.question.incorrect {
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.answer-options {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.answer-option {
+    padding: 5px;
+    margin: 5px 0;
+}
+
+.answer-option.correct-option {
+    background-color: #d4edda;
+}
+
+.answer-option.incorrect-option {
+    background-color: #f8d7da;
 }
